# automated-trading-system

./: .env.example  Cargo.toml  docker-compose.yml  readme.md
coinbase-advanced-api/: Cargo.toml
coinbase-advanced-api/src/: error.rs  lib.rs  signer.rs
coinbase-advanced-api/src/rest/: client.rs  endpoint.rs  mod.rs  params.rs  query.rs
coinbase-advanced-api/src/rest/products/: candles.rs
coinbase-advanced-api/src/ws/: client.rs  mod.rs  request.rs
coinbase-advanced-api/src/ws/channel/: mod.rs  ticker.rs  ticker_batch.rs
collector/: Cargo.toml
collector/src/: main.rs
data-processor/: Cargo.toml
data-processor/src/: main.rs  ticker.rs
indicators/: Cargo.toml
indicators/src/: candle_close.rs  fvg.rs  main.rs  swing.rs
models/: Cargo.toml
models/migrations/2024-04-22-211533_create_candles/: up.sql
models/migrations/2024-05-17-180538_create_fvg/: down.sql  up.sql
models/migrations/2024-06-04-175744_create_trade/: down.sql  up.sql
models/migrations/2024-06-06-090437_create_swings/: down.sql  up.sql
models/src/: candle.rs  fvg.rs  lib.rs  schema.rs  swing.rs  trade.rs
position-manager/: Cargo.toml
position-manager/src/: candle.rs  main.rs
rest/: Cargo.toml
rest/src/: main.rs
rest/src/router/: backtesting.rs  mod.rs  product.rs
strategy/: Cargo.toml
strategy/src/: fvg_close.rs  main.rs
strategy/src/strategy/: algo_a_b.rs  mod.rs
strategy/src/strategy/combo/: mod.rs  state.rs
types/: Cargo.toml
types/src/: lib.rs  timeframe.rs
