[package]
name = "coinbase-advanced-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.80"
bytes = "1.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive-getters = "0.3.0"
derive_builder = "0.20.0"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
josekit = "0.8.6"
rand = "0.8.5"
reqwest = { version = "0.12.4", default-features = false, features = ["rustls-tls", "json"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
serde_qs = "0.13.0"
serde_urlencoded = "0.7.1"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = "2.5.0"
