[package]
name = "data-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
coinbase-advanced-api = { path = "../coinbase-advanced-api/" }
models = { path = "../models/" }
types = { path = "../types/" }
diesel = { version = "2.1.6", features = ["postgres"] }
futures = "0.3.30"
redis = "0.25.3"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
dotenvy = "0.15.7"
