[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
derive-getters = "0.3.0"
derive_builder = "0.20.0"
diesel = { version = "2.1.6", features = ["postgres", "chrono"] }
rust_decimal = { version = "1.35.0", features = ["db-diesel2-postgres"] }
serde = { version = "1.0.198", features = ["derive"] }
