[package]
name = "rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.38", features = ["serde"] }
coinbase-advanced-api = { path = "../coinbase-advanced-api/" }
models = { path = "../models/" }
types = { path = "../types/" }
diesel = { version = "2.1.6", features = ["postgres", "r2d2"] }
futures = "0.3.30"
redis = { version = "0.25.3", features = ["r2d2"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
r2d2 = "0.8.10"
axum = { version = "0.7.5", features = ["ws"] }
serde = { version = "1.0.202", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
rust_decimal = "1.35.0"
