[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
garde = { version = "0.18.0", features = ["derive"] }
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
thiserror = "1.0.59"
